<resources>
    <string name="app_name">Udacity Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="portfolio_title">Meus Apps Nanodegree</string>
    <string name="portfolio_app_popupar_movies">Popular movies</string>
    <string name="portfolio_app_stock_hawk">Stock Hawk</string>
    <string name="portfolio_app_build_it_bigger">Build it bigger</string>
    <string name="portfolio_app_make_your_app_material">Make your app material</string>
    <string name="portfolio_app_go_ubiquitous">Go ubiquitous</string>
    <string name="portfolio_app_capstone">Capstone</string>
    <string name="portfolio_launch_info_text">This button will launch my app</string>

</resources>
