<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.renatoneto.udacityportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/portofolio_padding_top"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/portofolio_title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/portofolio_title_margin_bottom"
            android:text="@string/portfolio_title" />

        <Button
            android:id="@+id/launch_app_popular_movies"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_popupar_movies"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/launch_app_stock_hawk"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_stock_hawk"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/launch_app_build_it_bigger"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_build_it_bigger"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/launch_app_make_your_app_material"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_make_your_app_material"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/launch_app_go_ubiquitous"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_go_ubiquitous"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/launch_app_capstone"
            android:layout_width="@dimen/portofolio_app_button_width"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_app_capstone"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>

</ScrollView>
